--- a/.github/workflows/comment_on_pr.yml
+++ b/.github/workflows/comment_on_pr.yml
@@ -14,4 +14,4 @@ jobs:
         run: |
           gh pr comment ${{ github.event.pull_request.number }} --body "The PR is successful"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
