--- a/.github/workflows/reply_on_command.yml
+++ b/.github/workflows/reply_on_command.yml
@@ -16,6 +16,7 @@ jobs:
         if: contains(github.event.comment.body, '/hello')
         uses: actions/github-script@v6
         with: 
+          github-token: ${{ secrets.SECRET_TOKEN }}
           script: |
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
