--- a/.github/workflows/reply_on_command.yml
+++ b/.github/workflows/reply_on_command.yml
@@ -25,6 +25,6 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'hello!'
+              body: 'action | hello!'
             });
 
